fix: categories filter choice

--- a/categories/templates/categories.html
+++ b/categories/templates/categories.html
@@ -72,17 +72,17 @@
 				<h4 class="text-white mb-3 bg-[#8a6420] rounded-md px-2 py-1">
 					<b>Category</b>
 				</h4>
-				<input type="radio" id="cat1" name="foodCat" value="Makanan Berat dan Nasi">
-				<label for="cat1" class="ml-2">Makanan Berat dan Nasi</label><br>
+				<input type="radio" id="cat1" name="foodCat" value="Makanan Berat & Nasi">
+				<label for="cat1" class="ml-2">Makanan Berat & Nasi</label><br>
 
-				<input type="radio" id="cat2" name="foodCat" value="Olahan Ayam dan Daging">
-				<label for="cat1" class="ml-2">Olahan Ayam dan Daging</label><br>
+				<input type="radio" id="cat2" name="foodCat" value="Olahan Ayam & Daging">
+				<label for="cat2" class="ml-2">Olahan Ayam & Daging</label><br>
 
-				<input type="radio" id="cat3" name="foodCat" value="Mie, Pasta, dan Spaghetti">
-				<label for="cat1" class="ml-2">Mie, Pasta, dan Spaghetti</label><br>
+				<input type="radio" id="cat3" name="foodCat" value="Mie, Pasta, & Spaghetti">
+				<label for="cat3" class="ml-2">Mie, Pasta, & Spaghetti</label><br>
 
-				<input type="radio" id="cat4" name="foodCat" value="Makanan Ringan dan Cemilan">
-				<label for="cat1" class="ml-2">Makanan Ringan dan Cemilan</label><br><br>
+				<input type="radio" id="cat4" name="foodCat" value="Makanan Ringan & Cemilan">
+				<label for="cat4" class="ml-2">Makanan Ringan & Cemilan</label><br><br>
 
 				<h4 class="text-white mb-3 mt-1 rounded-md bg-[#8a6420] px-2 py-1">
 					<b>Price Range</b>
@@ -93,7 +93,7 @@
 				<input type="radio" id="range2" name="priceRange" value="Range2">
 				<label for="range2" class="ml-2">50.000 - 100.000</label><br>
 
-				<input type="radio" id="range3" name="priceRange" value="Range4">
+				<input type="radio" id="range3" name="priceRange" value="Range3">
 				<label for="range3" class="ml-2">101.000 - 150.000</label><br>
 
 				<input type="radio" id="range4" name="priceRange" value="Range4">
@@ -105,11 +105,12 @@
 				
 				<div class="flex justify-center">
 					<button id="submitFilter" class="w-[6rem] bg-[#4c6444] hover:bg-[#3d5237] py-2 rounded-md text-white mr-5"><b>Filter</b></button>
-					<button id="cancelFilter" class="w-[6rem] bg-gray-500 hover:bg-gray-600 py-2 rounded-md text-white"><b>Cancel</b></button>	
+					<button id="cancelFilter" class="w-[6rem] bg-gray-500 hover:bg-gray-600 py-2 rounded-md text-white"><b>Cancel</b></button>    
 				</div>
 			</form>
 		</div>
 	</div>
+
 </div>
 
 <script>
