--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav id="navbar" class="fixed top-0 left-0 z-50 w-full transition duration-300 ease-in-out bg-transparent">
+<nav id="navbar" class="fixed top-0 left-0 z-50 w-full transition duration-300 ease-in-out bg-transparent backdrop-blur-md">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <img src="{% static '/images/logo-bfq.png' %}" alt="Logo" class="h-8" />
@@ -17,7 +17,7 @@
             <a href="{% url 'blog:article_list' %}" class="nav-link">Blog</a>
             <a href="{% url 'discussion:show_discussion' %}" class="nav-link">Discussion</a>
           {% endif %}
-          
+
           <div class="relative">
             <button id="profileDropdown" class="nav-link">
               Welcome, {{ user.username }} ▼
@@ -63,9 +63,9 @@
 
     if (window.scrollY > 50) {
       navbar.classList.remove("bg-transparent");
-      navbar.classList.add("bg-[#102820]");
+      navbar.classList.add("bg-[#102820]/80", "backdrop-blur-md");
     } else {
-      navbar.classList.remove("bg-[#102820]");
+      navbar.classList.remove("bg-[#102820]/80", "backdrop-blur-md");
       navbar.classList.add("bg-transparent");
     }
   });
