style: main page

--- a/main/templates/main_customer.html
+++ b/main/templates/main_customer.html
@@ -43,7 +43,9 @@
     </div>
   </div>
 
-  <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
+  <div class="flex justify-center my-4">
+    <img src="{% static 'images/subtitle-explore.png' %}" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
+  </div>  
 
   <div id="product_cards"></div>
 
